Normalize photon CR, remove 2018_PreHEM.

--- a/stack_plots.tex
+++ b/stack_plots.tex
@@ -77,6 +77,7 @@ Recent Changes
 \item Fixed bug so that we save histograms with variables calculated with different jet pts.
 \item Only use medium photon ID for jet cleaning, modified MET, and selection.
 \item Use different jet pt cuts for Z to NuNu MC (used for background prediction).
+\item Lepton CR shows number of events, but photon CR is normalized to unit area (both Data and MC).
 \end{itemize}
 \end{frame}
 
