working point description

--- a/stack_plots.tex
+++ b/stack_plots.tex
@@ -90,9 +90,9 @@ Data vs MC in Lepton and Photon CRs
 \begin{itemize}
 \item \fix: Use FatJet\_matchesElectron, FatJet\_matchesMuon, and FatJet\_matchesPhoton.
 \end{itemize}
-\item \bug: To select the ISR jet, we were only using the 2016 working point for the b--tag discriminator cut to check if the AK8 subjets were b--jets.
+\item \bug: To select the ISR jet, we were only using the 2016 medium working point for the b--tag discriminator cut to determine if the AK8 subjets were b--jets.
 \begin{itemize}
-\item \fix: Use b--tag working points from 2016, 2017, and 2018 for each year respectively.
+\item \fix: Use the 2016, 2017, and 2018 b--tag medium working points for each year respectively.
 \end{itemize}
 \end{enumerate}
 \end{frame}
